# future-vision-transport

./: .gitignore  Dockerfile  pyproject.toml  requirements_colab.txt
.github/workflows/: deploy-cloud-run.yml
backend/: Dockerfile  Procfile  README.md  app.yaml  main copy.py  main.py  main_cpu_optimized copy.py  main_cpu_optimized.py  pyproject.toml  requirements.txt  requirements_local.txt
data/: dataset_overview.md
docs/: note_technique.md  presentation.html
frontend/: Dockerfile  segmentation_test_interface.html
notebooks/: 1_EDA.ipynb  2.1_Architecture_Research.ipynb  2.1_Architecture_Research.py  2.2_Model_Implementation.ipynb  2.2_Model_Implementation.py  2.3_Advanced_Loss_Functions.ipynb  2.3_Advanced_Loss_Functions.py  2.4_Data_Generator.ipynb  2.4_Data_Generator.py  2.5_Data_Augmentation.py  2.6_Class_Balancing_Enhanced.ipynb  2.6_Class_Balancing_Enhanced.py  2.7_Training_Pipeline_with_tests.ipynb  2_7_Full_Pipeline.ipynb  2_7_full_pipeline - Copie.py  README.md
notebooks/backup_outputs/: 8_categories_distribution.csv  augmentation_usage_examples.py  class_distribution_sample.csv  generator_class_distribution.csv
notebooks/backup_outputs/models/test_simple_segmentation/: model_summary.txt
notebooks/figures/: dataset_structure.html
notebooks/outputs/: dataset_structure.csv  update_presentation_resources.py
