[project]
name = "future-vision-transport-api"
version = "1.0.0"
description = "FastAPI segmentation API for autonomous vehicle computer vision"
requires-python = ">=3.9"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "httpx==0.25.2",
    "albumentations>=1.3.0",
    "opencv-python>=4.8.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "psutil==5.9.6",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "google-cloud-storage>=2.10.0",
    "tensorflow==2.18.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]
